--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <a href=""><img src="./3.png" alt="Logo"></a>
+    <a href=""><img src="./Assets/3.png" alt="Logo"></a>
     <h1>Autorepuestos</h1>
     <nav>
       <ul>
@@ -52,9 +52,9 @@
     </ul>
   </section>
   <footer>
-    <a href=""><img src="./icons8-instagram-48.png" alt="Instagram Logo"></a>
-    <a href=""><img src="./icons8-facebook-48.png" alt="Facebook Logo"></a>
-    <a href=""><img src="./icons8-whatsapp-48.png" alt="Whatsapp Logo"></a>
+    <a href=""><img src="./Assets/icons8-instagram-48.png" alt="Instagram Logo"></a>
+    <a href=""><img src="./Assets/icons8-facebook-48.png" alt="Facebook Logo"></a>
+    <a href=""><img src="./Assets/icons8-whatsapp-48.png" alt="Whatsapp Logo"></a>
   </footer>
 
 </body>
